--- a/djangoapp/blog/templates/blog/partials/_head.html
+++ b/djangoapp/blog/templates/blog/partials/_head.html
@@ -2,7 +2,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
     
-    {% comment %} <link rel="stylesheet" href="{% static 'blog/css/style.css' %}"> {% endcomment %}
-    
+    {% if site_setup.favicon %}
+    <link rel="shortcut icon" href="{{ site_setup.favicon.url}}" type="image/x-icon">
+    {% endif %}
+
     <title>BLOG</title>
