--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -4,6 +4,7 @@
     {% include 'blog/partials/_head.html' %}
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quis consequatur, officiis eligendi beatae soluta suscipit fuga! Culpa, eius! A dolore accusamus aut deserunt dolores excepturi placeat quos tempora recusandae?</p>
     <h1>{{ site_setup.title }}</h1>
     {% include 'blog/partials/_header.html' %}
     {% block content %}{% endblock content %}
