--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    {% include 'blog/partials/_head.html' %}
+  {% include 'blog/partials/_head.html' %}
 </head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quis consequatur, officiis eligendi beatae soluta suscipit fuga! Culpa, eius! A dolore accusamus aut deserunt dolores excepturi placeat quos tempora recusandae?</p>
-    <h1>{{ site_setup.title }}</h1>
-    {% include 'blog/partials/_header.html' %}
-    {% block content %}{% endblock content %}
-    {% include 'blog/partials/_pagination.html' %}
-    {% include 'blog/partials/_footer.html' %}
+<body class="dark-theme"> 
+  {% include 'blog/partials/_header.html' %}
+
+  {% block content %}{% endblock content %}
+  
+  {% include 'blog/partials/_pagination.html' %}
+  
+  {% include 'blog/partials/_footer.html' %}
+
+  {% include 'blog/partials/_temp.html' %}
 </body>
 </html>
