Atualizando todos HTML

--- a/djangoapp/blog/static/blog/css/style.css
+++ b/djangoapp/blog/static/blog/css/style.css
@@ -77,7 +77,7 @@ a {
 
 a:hover {
   color: hsl(var(--clr-primary-dk));
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 h1,
